<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/old_papar_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/image"
                android:paddingTop="10dp"
                android:src="@drawable/one_piece_logo" />

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:gravity="center"-->
            <!--                android:text="Short Story"-->
            <!--                android:textAllCaps="true"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="30sp"-->
            <!--                android:textStyle="bold"-->
            <!--                />-->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="281dp"
                android:contentDescription="@string/image"
                android:src="@drawable/stro_hat_crue" />

            <TextView
                android:id="@+id/crew_name"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/text_bg_old_paper"
                android:gravity="center"
                android:lineSpacingExtra="2dp"
                android:padding="30dp"
                android:text="@string/short_story_one_piece"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/name_card"
                android:gravity="center"
                android:text="@string/crew_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
            <!--   using for crue image and name         -->
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:scrollbars="none">
                <!--     main horizontal crolar for image and name           -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <!-- Crue 01  -->
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="200dp"
                            android:src="@drawable/luffy" />

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/name_card"
                            android:gravity="center"
                            android:text="@string/captain" />
                    </LinearLayout>

                    <!-- Crue 02  -->
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="200dp"
                            android:src="@drawable/zoro" />

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/name_card"
                            android:gravity="center"
                            android:text="@string/crue_one" />
                    </LinearLayout>


                    <!-- Crue 03  -->
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="200dp"
                            android:src="@drawable/nami" />

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/name_card"
                            android:gravity="center"
                            android:text="@string/crue_two" />
                    </LinearLayout>

                    <!-- Crue 04  -->
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="200dp"
                            android:src="@drawable/usop" />

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/name_card"
                            android:gravity="center"
                            android:text="@string/crue_three" />
                    </LinearLayout>

                    <!-- Crue 05  -->
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="200dp"
                            android:src="@drawable/sanji" />

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/name_card"
                            android:gravity="center"
                            android:text="@string/crue_foure" />
                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>


            <Button
                android:id="@+id/clik_to_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#26C6DA"
                android:text="Button"
                android:padding="10dp"/>
        </LinearLayout>


    </ScrollView>



</LinearLayout>
